Fix horizontal scroller appearing when embedding Yahoo video.

--- a/Source/Theming/base.less
+++ b/Source/Theming/base.less
@@ -20,7 +20,7 @@ body {
   word-wrap: break-word;
 }
 .postbody {
-  img, iframe {
+  img, iframe, embed {
     max-width: 100%;
   }
 }
